Fixes wrapping issue with responsive row toggle (pivot); Updates htmlToDataStore to not add table column text if contents are present. Updates styles for itags in responsive table header within pivot view.

--- a/src/project/components/table/src/scss/table.scss
+++ b/src/project/components/table/src/scss/table.scss
@@ -580,6 +580,10 @@
                     display: none;
                 }
 
+                .emp-pivote-table-expand{
+                    white-space:normal;
+                }
+
                 &:hover {
                     background: transparent;
                 }
@@ -631,6 +635,10 @@
                         font-weight: normal;
                         margin-bottom: 5px;
                         overflow: visible;
+
+                        .emp-icon-help{
+                            vertical-align: baseline;
+                        }
                     }
                 }
 
